--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ application/libraries/grocery_crud_extended.php
 application/logs/
 assets/uploads/images/
 assets/uploads/img/
+assets/uploads/barcode/
 application/models/index.html
 application/third_party/
 application/views/index.html
